# usagi

./: .editorconfig  .gitignore  .luarc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  README.md  README_DEV.md  justfile  setup-emscripten.sh
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
.zed/: settings.json  tasks.json
docs/: web-build.md
examples/: demoscene.lua  hello_usagi.lua  input.lua  shapes.lua
examples/dialog/: main.lua
examples/input_test/: main.lua
examples/level_from_csv/: main.lua
examples/level_from_csv/data/: level.csv
examples/level_from_json/: main.lua
examples/level_from_json/data/: levels.json
examples/localization/: main.lua
examples/localization/data/strings/: en.json  es.json
examples/music/: main.lua
examples/notetris/: README.md  board.lua  config.lua  draw.lua  effects.lua  main.lua  pieces.lua  push.rb  scoring.lua
examples/operators/: main.lua
examples/pico8/: main.lua  pico8.lua
examples/save/: main.lua
examples/snake/: main.lua
examples/sound/: main.lua
examples/spr/: main.lua
meta/: README.md  usagi.lua
src/: api.rs  assets.rs  bundle.rs  capture.rs  compile.rs  config.rs  export.rs  font.rs  game_id.rs  icon.rs  init.rs  input.rs  macos_app.rs  main.rs  palette.rs  pause.rs  preprocess.rs  render.rs  save.rs  session.rs  settings.rs  templates.rs  vfs.rs
src/pause/: confirm_clear.rs  input_menu.rs  input_tester.rs  key_config.rs  pad_config.rs  settings_menu.rs  top.rs  volume.rs
src/tools/: jukebox.rs  mod.rs  save_inspector.rs  tilepicker.rs
templates/init/: main.lua
web/: shell.html  usagi_save.js
website/: README.md  deno.json  main.ts
