[package]
name = "usagi"
version = "0.1.0-dev.2"
edition = "2024"
license = "Unlicense"
authors = ["Brett Chalupa <brett@brettchalupa.com>"]
homepage = "https://usagiengine.com"
description = "Simple 2D game engine for rapid prototyping with Lua, featuring live reload; powered by Rust and sola-raylib"
repository = "https://github.com/brettchalupa/usagi"
keywords = ["gamedev", "lua"]
categories = ["game-engines"]
exclude = ["examples", ".zed", "docs", "justfile", "*.sh"]

[dependencies]
clap = { version = "4", features = ["derive"] }
mlua = { version = "0.11", features = ["lua54", "vendored"] }
sola-raylib = { version = "6.0" }

[dev-dependencies]
tempfile = "3"

# Smaller binaries on all targets. Cargo automatically uses panic=unwind
# for the test profile so `cargo test` is unaffected. Note this does NOT
# disable `-fwasm-exceptions` on the emscripten target (Rust 1.93+ passes
# it unconditionally); see `docs/web-build.md`.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
